Added new Bootstrap theme. Made updates to header and menus.

--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -2,8 +2,11 @@
 html {
 	background-color: #222222;
 }
+body{
+    font-size: 16px;
+}
 #body{
-	padding-top: 70px;  
+	padding-top: 100px;
 	background: #fff;
 }
 #main-footer {
