--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -255,3 +255,38 @@ p.serviceName{
 p.serviceName > span.lead{
     font-size: 18px;
 }
+
+textarea, textarea.form-control, input.form-control, input[type=text], input[type=password], input[type=email], input[type=number], [type=text].form-control, [type=password].form-control, [type=email].form-control, [type=tel].form-control, [contenteditable].form-control {
+    padding: 6px 10px;
+    border: 1px solid #ddd;
+    /*border-radius: 3px;*/
+    -webkit-appearance: initial;
+    -webkit-box-shadow: none;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    font-size: 16px;
+}
+
+select, select.form-control {
+    border: 1px solid #ddd;
+    /*border-radius: 3px;*/
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: 6px 10px;
+    -webkit-background-size: 13px 13px;
+    background-size: 13px;
+    background-repeat: no-repeat;
+    background-position: right center;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.radio label, .radio-inline label, .checkbox label, .checkbox-inline label {
+    padding-left: 0;
+}
+
+input[type="radio"], .radio input[type="radio"], .radio-inline input[type="radio"] {
+    margin-top: 8px;
+}
