--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -414,3 +414,29 @@ a.rounded-link {
 .no-margin {
     margin: 0 !important;
 }
+
+div.profilePanel{
+    background: #18afa8;
+    background: -moz-linear-gradient(top,  #18afa8 0%, #067b8c 71%) !important;
+    background: -webkit-linear-gradient(top,  #18afa8 0%,#067b8c 71%) !important;
+    background: linear-gradient(to bottom,  #18afa8 0%,#067b8c 71%) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18afa8', endColorstr='#067b8c',GradientType=0 ) !important;
+
+
+}
+
+div.profilePanel > h4 > a {
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+}
+
+a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus{
+    background: #08b2ac;
+    background: -moz-linear-gradient(top,  #08b2ac 0%, #067b8c 71%);
+    background: -webkit-linear-gradient(top,  #08b2ac 0%,#067b8c 71%);
+    background: linear-gradient(to bottom,  #08b2ac 0%,#067b8c 71%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#08b2ac', endColorstr='#067b8c',GradientType=0 );
+
+
+}
