--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -1,8 +1,9 @@
 /* CSS Document */
 html {
-	background-color: #F7F7F7;
+    background-color: #F7F7F7;
 }
-body{
+
+body {
     font-size: 16px;
 }
 
@@ -13,55 +14,64 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #797979;
 }
 
-#body{
-	padding-top: 100px;
-	background: #F7F7F7;
-}
-#main-footer {
-	margin-top: 100px;
-	padding: 40px 0px 30px 0px;
-}
-.modal-dialog {
-    width:800px;
-}
-.panel-group .panel {
-	overflow: visible;	
-}
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
-  position: relative;
-  font-size: 16px;
-  height: auto;
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+#body {
+    padding-top: 100px;
+    background: #F7F7F7;
 }
 
+#main-footer {
+    margin-top: 100px;
+    padding: 40px 0px 30px 0px;
+}
+
+.modal-dialog {
+    width: 800px;
+}
+
+.panel-group .panel {
+    overflow: visible;
+}
+
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
+}
+
+.form-signin .checkbox {
+    font-weight: normal;
+}
+
+.form-signin .form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.form-signin .form-control:focus {
+    z-index: 2;
+}
+
+.form-signin input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
 
 /*
  * Side navigation
@@ -72,180 +82,198 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 /* By default it's not affixed in mobile views, so undo that */
 .bs-sidebar.affix {
-  position: static;
+    position: static;
 }
 
 /* First level of nav */
 .bs-sidenav {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  padding-top:    10px;
-  padding-bottom: 10px;
-  text-shadow: 0 1px 0 #fff;
-  background-color: #f7f5fa;
-  border-radius: 5px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-shadow: 0 1px 0 #fff;
+    background-color: #f7f5fa;
+    border-radius: 5px;
 }
 
 /* All levels of nav */
 .bs-sidebar .nav > li > a {
-  display: block;
-  color: #716b7a;
-  padding: 5px 20px;
+    display: block;
+    color: #716b7a;
+    padding: 5px 20px;
 }
+
 .bs-sidebar .nav > li > a:hover,
 .bs-sidebar .nav > li > a:focus {
-  text-decoration: none;
-  background-color: #e5e3e9;
-  border-right: 1px solid #dbd8e0;
+    text-decoration: none;
+    background-color: #e5e3e9;
+    border-right: 1px solid #dbd8e0;
 }
+
 .bs-sidebar .nav > .active > a,
 .bs-sidebar .nav > .active:hover > a,
 .bs-sidebar .nav > .active:focus > a {
-  font-weight: bold;
-  color: #563d7c;
-  background-color: transparent;
-  border-right: 1px solid #563d7c;
+    font-weight: bold;
+    color: #563d7c;
+    background-color: transparent;
+    border-right: 1px solid #563d7c;
 }
 
 /* Tabs Left CSS from Bootstrap 2.3*/
-.tabs-left>.nav-tabs {
-float: left;
-margin-right: 0px;
-padding-right:0px;
-border-right: 1px solid #ddd;
+.tabs-left > .nav-tabs {
+    float: left;
+    margin-right: 0px;
+    padding-right: 0px;
+    border-right: 1px solid #ddd;
 }
-.tabs-below>.nav-tabs, .tabs-right>.nav-tabs, .tabs-left>.nav-tabs {
-border-bottom: 0;
+
+.tabs-below > .nav-tabs, .tabs-right > .nav-tabs, .tabs-left > .nav-tabs {
+    border-bottom: 0;
 }
-.tabs-left>.nav-tabs>li, .tabs-right>.nav-tabs>li {
-float: none;
-margin-bottom:0px;
-margin-right: -1px;
+
+.tabs-left > .nav-tabs > li, .tabs-right > .nav-tabs > li {
+    float: none;
+    margin-bottom: 0px;
+    margin-right: -1px;
 }
-.tabs-left>.nav-tabs .active>a, .tabs-left>.nav-tabs .active>a:hover, .tabs-left>.nav-tabs .active>a:focus {
-border-color: #ddd transparent #ddd #ddd;
+
+.tabs-left > .nav-tabs .active > a, .tabs-left > .nav-tabs .active > a:hover, .tabs-left > .nav-tabs .active > a:focus {
+    border-color: #ddd transparent #ddd #ddd;
 }
-.tabs-left>.nav-tabs>li>a {
-margin-right: -1px;
--webkit-border-radius: 4px 0 0 4px;
--moz-border-radius: 4px 0 0 4px;
-border-radius: 4px 0 0 4px;
+
+.tabs-left > .nav-tabs > li > a {
+    margin-right: -1px;
+    -webkit-border-radius: 4px 0 0 4px;
+    -moz-border-radius: 4px 0 0 4px;
+    border-radius: 4px 0 0 4px;
 }
-.tabs-left>.nav-tabs>li>a, .tabs-right>.nav-tabs>li>a {
-min-width: 74px;
-margin-right: 0;
-margin-bottom: 3px;
+
+.tabs-left > .nav-tabs > li > a, .tabs-right > .nav-tabs > li > a {
+    min-width: 74px;
+    margin-right: 0;
+    margin-bottom: 3px;
 }
-.tabs-left>.nav-tabs>li>a:hover, .tabs-left>.nav-tabs>li>a:focus {
-border-color: #eee #ddd #eee #eee;
+
+.tabs-left > .nav-tabs > li > a:hover, .tabs-left > .nav-tabs > li > a:focus {
+    border-color: #eee #ddd #eee #eee;
 }
+
 /* Nav: second level (shown on .active) */
 .bs-sidebar .nav .nav {
-  display: none; /* Hide by default, but at >768px, show it */
-  margin-bottom: 8px;
+    display: none; /* Hide by default, but at >768px, show it */
+    margin-bottom: 8px;
 }
+
 .bs-sidebar .nav .nav > li > a {
-  padding-top:    3px;
-  padding-bottom: 3px;
-  padding-left: 30px;
-  font-size: 90%;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 30px;
+    font-size: 90%;
 }
 
 /* Show and affix the side nav when space allows it */
 @media (min-width: 992px) {
-  .bs-sidebar .nav > .active > ul {
-    display: block;
-  }
-  /* Widen the fixed sidebar */
-  .bs-sidebar.affix,
-  .bs-sidebar.affix-bottom {
-    width: 213px;
-  }
-  .bs-sidebar.affix {
-    position: fixed; /* Undo the static from mobile first approach */
-    top: 80px;
-  }
-  .bs-sidebar.affix-bottom {
-    position: absolute; /* Undo the static from mobile first approach */
-  }
-  .bs-sidebar.affix-bottom .bs-sidenav,
-  .bs-sidebar.affix .bs-sidenav {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+    .bs-sidebar .nav > .active > ul {
+        display: block;
+    }
+
+    /* Widen the fixed sidebar */
+    .bs-sidebar.affix,
+    .bs-sidebar.affix-bottom {
+        width: 213px;
+    }
+
+    .bs-sidebar.affix {
+        position: fixed; /* Undo the static from mobile first approach */
+        top: 80px;
+    }
+
+    .bs-sidebar.affix-bottom {
+        position: absolute; /* Undo the static from mobile first approach */
+    }
+
+    .bs-sidebar.affix-bottom .bs-sidenav,
+    .bs-sidebar.affix .bs-sidenav {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
 }
+
 @media (min-width: 1200px) {
-  /* Widen the fixed sidebar again */
-  .bs-sidebar.affix-bottom,
-  .bs-sidebar.affix {
-    width: 263px;
-  }
+    /* Widen the fixed sidebar again */
+    .bs-sidebar.affix-bottom,
+    .bs-sidebar.affix {
+        width: 263px;
+    }
 }
 
 /* Google Map */
-#map-canvas { 
-	height: 300px ;
+#map-canvas {
+    height: 300px;
 }
 
 /* Bootstrap Multiselect */
 .multiselect {
-  text-align: left;
+    text-align: left;
 }
+
 .multiselect b.caret {
-  position: absolute;
-  top: 14px;
-  right: 8px;
+    position: absolute;
+    top: 14px;
+    right: 8px;
 }
 
 /* Bootstrap Overrides */
-.navbar-inverse h1, 
-.navbar-inverse h2, 
-.navbar-inverse h3,  
-.navbar-inverse h4,  
-.navbar-inverse h5, 
-.navbar-inverse .h1,  
-.navbar-inverse .h2,  
-.navbar-inverse .h3,  
-.navbar-inverse .h4,  
+.navbar-inverse h1,
+.navbar-inverse h2,
+.navbar-inverse h3,
+.navbar-inverse h4,
+.navbar-inverse h5,
+.navbar-inverse .h1,
+.navbar-inverse .h2,
+.navbar-inverse .h3,
+.navbar-inverse .h4,
 .navbar-inverse .h5 {
-	color: #fff;
-	margin-top: 20px;
-	margin-bottom: 10px;
+    color: #fff;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
+
 .navbar-inverse p {
-	color: #999;
+    color: #999;
 }
 
 .page-heading {
-	background: #eee;
-	margin-bottom: 10px;
-	padding: 0px 10px;
-	overflow: hidden;
+    background: #eee;
+    margin-bottom: 10px;
+    padding: 0px 10px;
+    overflow: hidden;
 }
 
 .page-heading h1,
 .page-heading .h3 {
-	display: inline-block;
-	padding-right: 10px;
+    display: inline-block;
+    padding-right: 10px;
 }
 
 .page-heading a.text-muted {
-	color: #999;
-	text-decoration: underline;
-}
-.page-heading a.text-muted:hover,
-.page-heading a.text-muted:focus {
-	color: #2a6496;
-	text-decoration: underline;
+    color: #999;
+    text-decoration: underline;
 }
 
-h1.row span{
-display: inline-block;
+.page-heading a.text-muted:hover,
+.page-heading a.text-muted:focus {
+    color: #2a6496;
+    text-decoration: underline;
+}
+
+h1.row span {
+    display: inline-block;
 }
 
 .panel-heading h4,
-.panel-heading .h4  {
-	display: inline-block;
+.panel-heading .h4 {
+    display: inline-block;
 }
 
 /*Form Element Overrides*/
@@ -286,31 +314,31 @@ input[type="radio"], .radio input[type="radio"], .radio-inline input[type="radio
 
 /*CH styles from this point on*/
 
-input.form-control{
+input.form-control {
     background: #FFFFFF;
 }
 
-hr{
+hr {
     border-top: 1px solid #0793A7;
 }
 
-.navbar-inverse{
+.navbar-inverse {
     background-color: #0793A7;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
     background-color: #056E7D;
 }
 
-.navbar-brand{
+.navbar-brand {
     color: #FFFFFF !important;
 }
 
-.navbar-inverse .navbar-collapse{
+.navbar-inverse .navbar-collapse {
     border-color: #067B8C;
 }
 
-.navbar-inverse .navbar-toggle .icon-bar{
+.navbar-inverse .navbar-toggle .icon-bar {
     background-color: #FFF;
 }
 
@@ -318,49 +346,49 @@ hr{
     color: #FFF;
 }
 
-label{
+label {
     line-height: 20px;
 }
 
-input[type="radio"]{
+input[type="radio"] {
     margin-top: 4px !important;
 }
 
 /*Service Card Styles*/
-span.serviceTime{
+span.serviceTime {
     font-variant: small-caps;
     font-size: 24px;
 }
 
-p.serviceName{
+p.serviceName {
     font-size: 24px;
     font-weight: bold;
     margin: 12px 0;
     line-height: 85%;
 }
 
-p.serviceName > span.lead{
+p.serviceName > span.lead {
     font-size: 20px;
 }
 
-div.serviceCard strong{
+div.serviceCard strong {
     font-size: 18px;
     margin-bottom: 4px;
     margin-right: 6px;
 }
 
-div.serviceCard button{
+div.serviceCard button {
     height: 70px;
     font-size: 18px;
 }
 
-div.serviceCard button > span.glyphicon{
+div.serviceCard button > span.glyphicon {
     padding-right: 25px;
     margin-left: -8px;
 }
 
 @media (max-width: 992px) {
-    div.serviceCard button{
+    div.serviceCard button {
         margin-top: 18px;
     }
 }
@@ -400,14 +428,28 @@ span.value {
 }
 
 .panel.panel-default .panel-body .header a {
-        color: #2196f3;
-        text-decoration: none;
-        border: 1px solid #ddd;
-        padding: 6px 14px;
-        border-radius: 20px;
-        margin: 0px;
-        display: inline-block;
-    }
+    color: #2196f3;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    padding: 6px 15px 6px 20px;
+    border-radius: 20px;
+    margin: 0px;
+    display: inline-block;
+
+    background: #08b2ac;
+    background: -moz-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
+    background: -webkit-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
+    background: linear-gradient(to bottom, #08b2ac 0%, #067b8c 71%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08b2ac', endColorstr='#067b8c', GradientType=0);
+
+    color: white;
+}
+.panel.panel-default .panel-body .header a span.fa {
+    margin-left: 10px;
+}
+.panel.panel-default .panel-body .header a:hover {
+    text-decoration: underline;
+}
 
 a.rounded-link {
     color: #2196f3;
@@ -423,17 +465,17 @@ a.rounded-link {
 .no-padding {
     padding: 0 !important;
 }
+
 .no-margin {
     margin: 0 !important;
 }
 
-div.profilePanel{
+div.profilePanel {
     background: #18afa8;
-    background: -moz-linear-gradient(top,  #18afa8 0%, #067b8c 71%) !important;
-    background: -webkit-linear-gradient(top,  #18afa8 0%,#067b8c 71%) !important;
-    background: linear-gradient(to bottom,  #18afa8 0%,#067b8c 71%) !important;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#18afa8', endColorstr='#067b8c',GradientType=0 ) !important;
-
+    background: -moz-linear-gradient(top, #18afa8 0%, #067b8c 71%) !important;
+    background: -webkit-linear-gradient(top, #18afa8 0%, #067b8c 71%) !important;
+    background: linear-gradient(to bottom, #18afa8 0%, #067b8c 71%) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#18afa8', endColorstr='#067b8c', GradientType=0) !important;
 
 }
 
@@ -443,13 +485,12 @@ div.profilePanel > h4 > a {
     color: white;
 }
 
-a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus{
+a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus {
     background: #08b2ac;
-    background: -moz-linear-gradient(top,  #08b2ac 0%, #067b8c 71%);
-    background: -webkit-linear-gradient(top,  #08b2ac 0%,#067b8c 71%);
-    background: linear-gradient(to bottom,  #08b2ac 0%,#067b8c 71%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#08b2ac', endColorstr='#067b8c',GradientType=0 );
-
+    background: -moz-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
+    background: -webkit-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
+    background: linear-gradient(to bottom, #08b2ac 0%, #067b8c 71%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08b2ac', endColorstr='#067b8c', GradientType=0);
 
 }
 
@@ -461,4 +502,54 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small, h1 .small, h2 .small, h3 .small, h4 .small, h5 .small, h6 .small, .h1 .small, .h2 .small, .h3 .small, .h4 .small, .h5 .small, .h6 .small {
     color: #7B9AAD;
+}
+
+.ui-datepicker {
+    z-index: 9999 !important;
+}
+
+
+.dashboard-value {
+    line-height: 100%;
+    display: inline-block;
+    padding-top: 6px;
+    vertical-align: text-top;
+}
+
+
+@media (min-width: 1200px) {
+    .affixed-side-nav {
+        width: 262px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px){
+    .affixed-side-nav {
+        width: 212px;
+    }
+
+}
+@media (min-width: 768px ) and (max-width: 991px) {
+    .affixed-side-nav {
+        position: relative;
+    }
+
+}
+
+@media (max-width: 767px) {
+    .affixed-side-nav {
+        display: none;
+    }
+
+    .fc-header-left,
+    .fc-header-center,
+    .fc-header-right{
+        display: block;
+    }
+
+
+    .panel.panel-default .panel-body .header a {
+        margin-top : 8px;
+    }
+
 }
