--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -312,7 +312,7 @@ input[type="radio"], .radio input[type="radio"], .radio-inline input[type="radio
     margin-top: 8px;
 }
 
-/*CH styles from this point on*/
+/************************ TEFT Specific Overrides ************************/
 
 input.form-control {
     background: #FFFFFF;
@@ -435,7 +435,6 @@ span.value {
     border-radius: 20px;
     margin: 0px;
     display: inline-block;
-
     background: #08b2ac;
     background: -moz-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
     background: -webkit-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
@@ -491,6 +490,7 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
     background: -webkit-linear-gradient(top, #08b2ac 0%, #067b8c 71%);
     background: linear-gradient(to bottom, #08b2ac 0%, #067b8c 71%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08b2ac', endColorstr='#067b8c', GradientType=0);
+    border-color: transparent !important;
 
 }
 
