Added multiple modal windows related to client profile, will probably condense later as information shifts into different panels/places; added password reset page; added coverage history table; standardized older modals; added required styles

--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -713,3 +713,7 @@ input[disabled="disabled"], textarea[disabled="disabled"], select[disabled="disa
     background: #fefefe;
     box-shadow: inset 2px 1px 1px -1px rgba(0, 0, 0, 0.2);
 }
+
+input[required], select[required], textarea[required]{
+    background-color: rgba(244, 248, 42, 0.39) !important;
+}
