--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -330,6 +330,11 @@ hr {
     background-color: #056E7D;
 }
 
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus{
+    background-color: #056E7D;
+    box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.25);
+}
+
 .navbar-brand {
     color: #FFFFFF !important;
 }
