--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -634,8 +634,11 @@ label.required.with-sub{
 }
 
 span.sublabel{
-    font-size: 14px;
+    font-size: 12px;
     padding-right: 9px;
+    font-weight: bold;
+    position: relative;
+    top: 3px;
 }
 
 
