--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -809,3 +809,12 @@ input[required], select[required], textarea[required]{
 .end-week-highlight .fc-wed {
     background: #F5FAFF;
 }
+
+table>caption{
+    color: rgb(102, 102, 102);
+    font-weight: bold;
+    font-size: 18px;
+    padding: 8px 0 0 4px;
+    border-bottom: 1px solid #CCCCCC;
+}
+
