--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -13,6 +13,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: 400;
     line-height: 1.1;
     color: #797979;
+}
+
+p{
+    font-size: 18px;
 }
 
 #body {
@@ -657,14 +661,14 @@ span.sublabel{
 
 
 button.panel-edit {
-    background: transparent !important;
+    background: #FFF !important;
     border: 1px solid #FFF;
     box-shadow: none;
     text-shadow: none;
-    color: #FFF;
-    margin-top: -5px;
+    color: #000;
+
     font-size: 14px;
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 button.panel-edit:focus {
@@ -816,5 +820,31 @@ table>caption{
     font-size: 18px;
     padding: 8px 0 0 4px;
     border-bottom: 1px solid #CCCCCC;
+}
+
+a:not(.list-group-item):not(.navbar-brand){
+    text-decoration: underline;
+    font-size: 18px;
+}
+
+div.panel-heading.profilePanel > h4.panel-title > a{
+    text-decoration: none !important;
+}
+
+div.navbar-collapse.collapse > ul.nav.navbar-nav > li > a{
+    text-decoration: none;
+}
+
+span.fa.fa-chevron-down{
+    font-size: 18px;
+}
+
+div.profilePanel > h4 > a {
+    font-size: 28px !important;
+}
+.fc-event-vert .fc-event-time{
+    font-size: 16px;
+    white-space: normal;
+    font-weight: bolder;
 }
 
